# ai-career-coach

./: .gitignore  LICENSE  README.md
backend/: auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/backend/: database.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/pages/: Chat.jsx  Interviewer.jsx  Login.jsx  MindMap.jsx  Resume.jsx  ResumeBuilder.jsx  Signup.jsx
