[project]
name = "ai-career-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "litellm>=1.90.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "typesense>=2.0.0",
    "uvicorn>=0.49.0",
]
